--- a/www/css/delovoy_styles_mobile.css
+++ b/www/css/delovoy_styles_mobile.css
@@ -2582,6 +2582,7 @@
 		width: 100%;
 		min-height: auto;
 		height: 100px;
+		overflow: hidden;
 		float: left;
 		border-bottom: 2px solid #fff;
 		line-height: 100px;
