--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -38,6 +38,8 @@ h2 {font-size: 29px; margin-bottom: .8em; line-height: 1.5; font-weight: 700; co
 .g-bigpicture, .g-bigpicture-box {position: relative; background-image: url(/images/svg/group.svg); background-repeat: repeat-x;}
 .g-bigpicture a {display: block; width: 100%; height: 100%; background-size: cover;}
 
+.g-error {color: #ff0033;}
+
 /* header */
 .header {height: 340px;}
 .header-top {height: 60px; padding: 18px 20px 0; color: #fff; background: #41d5e7 url(/images/svg/group.svg) repeat-x bottom;}
@@ -95,7 +97,7 @@ h2 {font-size: 29px; margin-bottom: .8em; line-height: 1.5; font-weight: 700; co
 .footer-subscribe button {display: inline-block; margin-left: -1px; width: 102px; height: 60px; background: #0085ff url(/images/svg/arrow-small.svg) no-repeat center; border: none; cursor: pointer;}
 
 /* index */
-.index-promo {margin-bottom: 50px;}
+.index-promo {margin-bottom: 80px;}
 .index-promo-left {float: left; width: 405px;}
 .index-promo-left-title {margin-bottom: 60px; font-size: 59px; font-weight: 300; line-height: 1.1em; color: #000;}
 .index-promo-links li {padding-bottom: 30px; padding-left: 100px; background-position: 20px .3em;}
@@ -116,7 +118,7 @@ h2 {font-size: 29px; margin-bottom: .8em; line-height: 1.5; font-weight: 700; co
 .index-text-right {float: left; width: 724px;}
 
 /* offers */
-.offers-items {margin-bottom: 150px;}
+.offers-items {margin-bottom: 100px;}
 .page-index .offers-items {margin-bottom: 0;}
 .offers-item {display: table; width: 100%; height: 100px; margin-bottom: 20px; background-color: #fbfbfc; line-height: normal;}
 .offers-item-title, .offers-item-date, .offers-item-center, .offers-item-link {display: table-cell; vertical-align: middle;}
