office centers and services $_DATA for request.php; tweaks v prodakshen

--- a/www/css/delovoy_styles_mobile.css
+++ b/www/css/delovoy_styles_mobile.css
@@ -1347,7 +1347,10 @@
 	.vd_specialoffer-header p{
 		font-size: 16px;
 		margin: 0;
-		padding: 0 10px;
+	}
+	.vd_specialoffer-header h1, .vd_specialoffer-header p{
+		padding-left: 10px;
+		padding-right: 10px;
 	}
 	.vd_specialoffer-offers-title{
 		font-size: 25px;
