--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -5365,6 +5365,7 @@ button.consultation {
 	background: url('../images/chevron-up.png');
     background-size: cover;
 	opacity: 0.3;
+    z-index: 1000;	
 }
 
 .scroll_to_top:hover {
