--- a/www/css/delovoy_styles_mobile.css
+++ b/www/css/delovoy_styles_mobile.css
@@ -49,7 +49,7 @@
 	}
 	.header-menu ul{
 		display: none;
-		margin-top: 80px;
+		margin-top: 75px;
 		background: white none repeat scroll 0% 0%;
 		z-index: 200;
 		position: relative;
@@ -1813,6 +1813,10 @@
 	
 	.vd_request_wrapper-form button {
 		width: 90%;
+	}
+
+	.footer-sm {
+		padding: 0 10px;
 	}
 	
 }
