--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -5409,10 +5409,40 @@ button.consultation {
 	display:none;
 	background: url('../images/chevron-up.png');
     background-size: cover;
-	opacity: 0.3;
+	opacity: 0.6;
     z-index: 1000;	
 }
 
 .scroll_to_top:hover {
 	opacity: 1;
+}
+
+.vd_fake_ajax_alert {
+    width: 910px;
+    position: fixed;
+    background-color: #f7f8f9;
+    top: 50%;
+    padding: 40px 60px 60px 60px;
+    text-align: left;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.3);
+    z-index: 2;
+}
+
+.vd_fake_ajax_alert-close {
+	background-image: url(../images/svg/cross.svg);
+    background-size: 19px 19px;
+    background-repeat: no-repeat;
+    /* font-family: Lato-Regular; */
+    height: 19px;
+    line-height: 19px;
+    font-size: 16px;
+    color: #b4b4cd;
+    background-position: center right;
+    width: 100px;
+    position: absolute;
+    right: 25px;
+    top: 25px;
+    cursor: pointer;
 }
